--- a/food.yaml
+++ b/food.yaml
@@ -1,4 +1,19 @@
-2021/05/14: Empire Hunan
-2021/05/15: Biagio's
-2021/05/16: Home
-2021/05/17: Juicy Platters
+2021/04/14: Empire Hunan
+2021/04/15: Biagio's
+2021/04/16: Home
+2021/04/17: Juicy Platters
+2021/04/18: Anthony's and Wing Stop
+2021/04/19: Unknown
+2021/04/20: Dine Out and Wing Stop
+2021/04/21: ReBar
+2021/04/22: Leftovers?
+2021/04/23: Dine Out and Wing Stop
+2021/04/24: Empire Hunan
+2021/04/25: Anthony's
+2021/04/26: Juicy Platters
+2021/04/27: Wing Stop
+2021/04/28: Home
+2021/04/29: Raymond's
+2021/04/30: Unknown
+2021/05/01: ReBar
+2021/05/02: Home
